--- a/src/js/package.json
+++ b/src/js/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "js",
-  "version": "1.0.0",
-  "description": "This project contains software for access to the database (written in JavaScript).",
-  "main": "app.js",
-  "scripts": {
-    "test": "eslint ."
-  },
-  "author": "Ivan Baturkin",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0",
-    "sequelize-auto": "^0.8.8"
-  }
+    "name": "js",
+    "version": "1.0.0",
+    "description": "This project contains software for access to the database (written in JavaScript).",
+    "main": "app.js",
+    "scripts": {
+        "test": "eslint ."
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mysql2": "^2.3.3",
+        "sequelize": "^6.12.0",
+        "sequelize-auto": "^0.8.8"
+    }
 }
